# cc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  runtest.py
doc/: asmgen.md  common.md  compilation_stages.md  compiler_design.md  intermediate_language.md  parse.md  software_design.md  tests.md  usage.md
src/: CMakeLists.txt  README.md  asm_gen.c  cc.sh  cfg.c  cfg.h  common.h  compiler.c  constant.h  errorcode.c  errorcode.h  globals.c  globals.h  il2analysis.c  il2analysis.h  il2gen.c  il2gen.h  il2statement.c  il2statement.h  ilgen.c  ilstatement.c  ilstatement.h  lexer.c  lexer.h  main.c  parse.c  parser.c  parser.h  set.c  set.h  symbol.c  symbol.h  symtab.c  symtab.h  tree.c  tree.h  type.c  type.h  vec.c  vec.h
src/asmgen/: Block.h  ErrorCode.h  IGNode.h  ILIns.h  ILStatement.h  ISMRFlag.h  PasmStatement.h  Statement.h  Symbol.h  X86.h  asm_gen.c  constant.h  fwddecl.h  oldtype.h  sysv.h  x86.h  x86_inssel.h  x86_inssel_macro.h
test/: address_of_array_index.py  assignment.c  assignment.py  boolean_expression.c  char_arithmetic.c  char_arithmetic.py  comparison.c  comparison.py  comparison_return_int.c  comparison_return_int.py  conversion.c  conversion.py  conversion_assignment.c  conversion_expression.c  conversion_expression.py  conversion_signed_unsigned_int.c  conversion_signed_unsigned_short.c  conversion_signed_unsigned_short.py  conversion_signedness.py  conversion_unsigned_char.c  conversion_unsigned_char.py  do_while.c  do_while.py  do_while_noloop.c  do_while_scoping.c  explicit_cast.py  for_declaration_loop.c  (+50 more)
(+60 files in other folders)
